--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -5,6 +5,10 @@
 
 .container {
 
+  .content {
+    margin-top: 8rem;
+  }
+
   .jumbotron {
     padding: 2rem;
 
@@ -34,6 +38,10 @@
           }
         }
       }
+    }
+
+    .input-group {
+      margin-bottom: 2rem;
     }
   }
 
