--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,7 @@
 /* elements list */
+.container .content {
+  margin-top: 8rem;
+}
 .container .jumbotron {
   padding: 2rem;
 }
@@ -21,6 +24,9 @@
 }
 .container .jumbotron .table-responsive .table tr .glyphicon.glyphicon-remove:hover {
   color: #ffa1c0;
+}
+.container .jumbotron .input-group {
+  margin-bottom: 2rem;
 }
 .container .sendotron {
   padding: 2rem;
