--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -5,6 +5,10 @@
 
 .container {
 
+  .content {
+    margin-top: 8rem;
+  }
+
   .jumbotron {
     padding: 2rem;
 
@@ -34,6 +38,10 @@
           }
         }
       }
+    }
+
+    .input-group {
+      margin-bottom: 2rem;
     }
   }
 
@@ -87,6 +95,7 @@
         margin: 14px 0 0;
         padding: 4px 3px 4px;
         line-height: 20px;
+        background-color: white;
       }
       input[type=button], input[type=submit] {
         clear: left;
@@ -110,6 +119,7 @@
         display:block;
         line-height: 20px;
         padding: 4px 3px 4px;
+        background-color: white;
       }
       input[type=button], input[type=submit] {
         margin: 20px 0 0;
