--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -180,3 +180,20 @@
   -khtml-user-drag: element;
   -webkit-user-drag: element;
 }
+
+.row {
+  .col-md-12 {
+    table {
+      tr {
+        cursor: pointer;
+
+        td {
+          &:hover {
+            background-color: indianred;
+            color: white;
+          }
+        }
+      }
+    }
+  }
+}
